--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
+<div class="grid">
+  <div class="semester-column">
+    <h2>1er Año</h2>
+    <div class="subject blocked">Pedagogía</div>
+    <div class="subject blocked">Psicología Educacional</div>
+    <!-- más materias -->
+  </div>
 
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malla Interactiva - Profesorado de Inglés</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Malla Interactiva - Profesorado de Inglés</h1>
-        <div id="grid" class="grid"></div>
-        <button onclick="resetProgress()" class="reset-button">Reiniciar progreso</button>
-    </div>
-    <script src="data.js"></script>
-    <script src="script.js"></script>
-</body>
-</html>
+  <div class="semester-column">
+    <h2>2do Año</h2>
+    <div class="subject blocked">Didáctica General</div>
+    <div class="subject blocked">Fonética II</div>
+    <!-- más materias -->
+  </div>
+</div>
